# POC-doc-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/data/: default_milestones.json  default_phases.json  default_success_criteria.json  sentry_platforms.json
backend/app/models/: __init__.py  gong.py  mutual_action_plan.py  phase.py  poc.py  success_criteria.py  team_member.py  tech_stack.py
backend/app/routers/: __init__.py  ai_analysis.py  customer_portal.py  docs_lookup.py  gong.py  mutual_action_plans.py  phases.py  pocs.py  success_criteria.py  team_members.py
backend/app/schemas/: __init__.py  gong.py  mutual_action_plan.py  phase.py  poc.py  success_criteria.py  team_member.py  tech_stack.py
backend/app/services/: ai_analysis_service.py  docs_mapping_service.py  gong_service.py  poc_service.py
frontend/: instrumentation-client.ts  package-lock.json  package.json  sentry.edge.config.ts
frontend/src/: instrumentation.ts
frontend/src/app/: global-error.tsx  layout.tsx  page.tsx  providers.tsx
frontend/src/app/staff/: layout.tsx  page.tsx
frontend/src/components/shared/: DateCell.tsx  EditableCell.tsx  NotesCell.tsx  PriorityBadge.tsx  ProgressBar.tsx  ResourceLink.tsx  (+3 more)
frontend/src/hooks/: useAiAnalysis.ts  useCustomerPortal.ts  useDebounce.ts  useGong.ts  useMilestones.ts  usePhases.ts  usePoc.ts  useSuccessCriteria.ts  useTeamMembers.ts  useTechStack.ts  useValueFramework.ts
frontend/src/lib/: api.ts  constants.ts  types.ts
(+17 files in other folders)
